[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A lightweight logging facade for Rust 
log = "0.4.17"
# A logging implementation for `log` which is configured via an environment variable. 
env_logger = "0.10.0"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.66"
# A dead simple ANSI terminal color painting library.
yansi = "0.5.1"
itertools = "0.11.0"
regex = "1.7.0"                    # An implementation of regular expressions for Rust. This implementation uses finite automata …

[dependencies.utils]
path = "../utils"